# CS6200-Operating-Systems

./: 1641.pem
mk/gios-spr-19-pr1-f2e764a93b4fac12261a8d0d409ff43cd0b16516/: .gitattributes  .gitignore  Installation.md  LICENSE  README.md  Vagrantfile  readme-student.md  requirements.txt  submit.py
mk/gios-spr-21-pr1-7f1a8c4e795a1e3f3d23d9f94981da4153a5dcd7/: .gitattributes  Dockerfile  Naga_Project_1_Readme.md  Readme.md  cs6200.txt  readme-student-template.md
pr1/: .gitattributes  README.md
pr1/echo/: echoclient.c  echoserver.c
pr1/gflib/: Makefile  gf-student.h  gfclient-student.h  gfclient.c  gfclient.h  gfclient_download.c  gfserver.c
pr1/mtgf/: Makefile  content.c  gfclient-student.h  gfclient_download.c  gfserver-student.h  gfserver.h  gfserver_main.c  handler.c  workload.c  workload.h
pr1/transfer/: Makefile  transferclient.c  transferserver.c
pr2/mk/gios-pr3-master/: .gitignore  CMakeLists.txt  Readme.md  readme-student.md  submit.py
pr2/mk/gios-pr3-master/cache/: cache-student.h  gfclient_download  gfclient_measure  handle_with_cache.c  simplecache.c  simplecached  simplecached.c  simplecached_noasan  webproxy  webproxy.c  webproxy_noasan  workload.txt
pr2/mk/gios-pr3-master/server/: .gitignore  Makefile  gfserver.h  handle_with_curl.c  handle_with_file.c  locals.txt  pr3_proxy_server-result-2019-03-25-10-08-07.json  proxy-student.h  steque.c  webproxy.c
pr3/cache/: cache-student.h  gfclient_download  gfserver.h  (+4 more)
pr4/: dfs-clientnode-p1.cpp  dfslib-shared-p1.h
ubuntu@ec2-54-89-246-245.compute-1.amazonaws.com/: readme-student-template.md
(+219 files in other folders)
